# backbone_things_api

./: .gitignore  Cargo.toml  example.env
database/: Cargo.toml
database/migrations/auth/: 20251129134417_profile.up.sql  20251129134422_token.up.sql
database/migrations/resource/: 20251129134458_model.down.sql  20251129134458_model.up.sql  20251129134502_device.down.sql  20251129134502_device.up.sql  20251129134508_group.down.sql  20251129134508_group.up.sql  20251129134515_set.down.sql  20251129134515_set.up.sql  20251129134523_data.up.sql  20251129134528_buffer.up.sql
database/src/: auth.rs  common.rs  lib.rs  resource.rs  value.rs
database/src/auth/: _row.rs  _schema.rs  api.rs  profile.rs  role.rs  token.rs  user.rs
database/src/common/: query_statement.rs  utility.rs
database/src/resource/: _row.rs  _schema.rs  buffer.rs  data.rs  device.rs  group.rs  model.rs  set.rs  slice.rs
database/tests/: test_auth.rs  test_query.rs  test_resource.rs  test_value.rs
docker/: Dockerfile.auth  Dockerfile.resource  docker-compose-auth.yaml  docker-compose-resource.yaml  docker-compose.yaml
grpc_api/client_python/: pyproject.toml
grpc_api/client_rust/: Cargo.toml
grpc_api/client_rust/src/: auth.rs  lib.rs  resource.rs
grpc_api/client_rust/src/auth/: api.rs  auth.rs  profile.rs  role.rs  token.rs  user.rs
grpc_api/client_rust/src/resource/: buffer.rs  config.rs  data.rs  device.rs  group.rs  model.rs  set.rs  slice.rs
grpc_api/client_rust/tests/: test_auth.rs  test_resource.rs  test_secured.rs
grpc_api/client_web/: index.js  package.json  rollup.config.mjs
grpc_api/proto/python/: pyproject.toml
grpc_api/proto/python/src/bbthings_grpc_proto/auth/: api_pb2.py  api_pb2_grpc.py  auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py  profile_pb2.py  profile_pb2_grpc.py  role_pb2.py  role_pb2_grpc.py  token_pb2.py  token_pb2.pyi  token_pb2_grpc.py  user_pb2.py  user_pb2_grpc.py
grpc_api/proto/python/src/bbthings_grpc_proto/resource/: buffer_pb2.py  buffer_pb2.pyi  buffer_pb2_grpc.py  data_pb2.py  data_pb2.pyi  data_pb2_grpc.py  device_pb2.py  device_pb2.pyi  device_pb2_grpc.py  group_pb2.py  group_pb2.pyi  group_pb2_grpc.py  model_pb2.py  model_pb2_grpc.py  set_pb2.py  set_pb2_grpc.py  slice_pb2.py  slice_pb2.pyi  slice_pb2_grpc.py
grpc_api/server/: Cargo.toml  build.rs
scripts/: .reset_test_db.sh  .run_server.sh  .start_server.sh  .stop_server.sh
(+208 files in other folders)
