[package]
name = "bbthings_grpc_client"
version = "0.1.0"
edition = "2024"

[dependencies]
bbthings_grpc_server = { path = "../server"}
bbthings_database = { path = "../../database"}
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
prost = "0.14.1"
tonic = "0.14.2"
tonic-reflection = "0.14.2"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "iana-time-zone", "oldtime", "std"] }
uuid = { version = "1.18.1", features = ["v4"] }
jsonwebtoken = { version = "10.2.0", default-features = false, features = ["rust_crypto"]}
dotenvy = "0.15.7"
